--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -106,8 +106,8 @@
                                                     {% for image in images %}
                                                         {% if image.image %}
                                                             <div class="col s12 center">
-                                                                <img class="lazyload responsive-img"
-                                                                     data-src="{{ image.image.url }}"
+                                                                <img class="responsive-img"
+                                                                     src="{{ image.image.url }}"
                                                                      alt="Imagen de: {{ item.author }}"
                                                                      title="Imagen de: {{ item.author }}">
                                                             </div>
@@ -142,7 +142,7 @@
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
                                                 <div class="card small">
                                                     <div class="card-image">
-                                                        <img class="lazyload" data-src="
+                                                        <img src="
                                                                 {% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.jpg" %}{% endif %}">
                                                         <span class="card-title white-text">{{ item.extra_content.title }}</span>
                                                     </div>
@@ -160,7 +160,7 @@
                                 </div>
                             </div>
                         {% elif item|classname == 'Photo' %}
-                            <div class="grid-item grid-item--width2 infinite-item tooltipped" data-position="bottom"
+                            <div class="grid-item infinite-item tooltipped" data-position="bottom"
                                  data-delay="50" data-tooltip="{{ item.caption }}">
                                 <div class="container-image">
                                     <div class="principal-content">
@@ -174,9 +174,7 @@
                                                 {% endfor %}
                                             </div>
                                         {% endif %}
-                                        <img class="lazyload" data-src="
-
-                                                {% if item.thumbnail %}{{ item.thumbnail.url }}{% elif item.image %}{{ item.image.url }}{% else %}{{ item.url_image }}{% endif %}"
+                                        <img src="{% if item.thumbnail %}{{ item.thumbnail.url }}{% elif item.image %}{{ item.image.url }}{% else %}{{ item.url_image }}{% endif %}"
                                              alt="{{ item.title }}" title="{{ item.title }}"
                                              onclick="location.href='{{ item.get_absolute_url }}'">
                                     </div>
@@ -196,7 +194,7 @@
                                 </div>
                             </div>
                         {% elif item|classname == 'Video' %}
-                            <div class="grid-item grid-item--width2 infinite-item tooltipped" data-position="bottom"
+                            <div class="grid-item infinite-item tooltipped" data-position="bottom"
                                  data-delay="50" data-tooltip="{{ item.caption }}">
                                 <div class="container-image">
                                     <div class="principal-content">
@@ -211,7 +209,7 @@
                                             </div>
                                         {% endif %}
                                         {% if item.thumbnail %}
-                                            <img class="lazyload" data-src="{{ item.thumbnail.url }}"
+                                            <img src="{{ item.thumbnail.url }}"
                                                  alt="{{ item.name }}" title="{{ item.name }}"
                                                  onclick="location.href='{% url "photologue:pl-video" username=item.owner.username slug=item.slug %}'">
                                         {% else %}
@@ -238,7 +236,7 @@
                             </div>
                         {% elif item|classname == 'ProfileMainPlaceholder' %}
                             {% if item.dashboard_entries|length %}
-                                <div class="grid-item grid-item--width2 infinite-item">
+                                <div class="grid-item infinite-item">
                                     <div class="col s12">
                                         {{ item.render_for_view|safe }}
                                     </div>
@@ -283,6 +281,7 @@
             transitionDuration: '0.3s'
         });
         $grid.imagesLoaded().progress(function () {
+            $grid.masonry('reloadItems');
             $grid.masonry('layout');
         });
     </script>
