--- a/skyfolk/templates/groups/comentarios_entries.html
+++ b/skyfolk/templates/groups/comentarios_entries.html
@@ -3,6 +3,7 @@
 {% load embed_video_tags %}
 {% load app_filters %}
 {% load group_utils %}
+{% load emoji_tags %}
 {% load static %}
 <div id="list-publications" class="infinite-container">
     {% for node in publications %}
@@ -25,14 +26,14 @@
                                                <div class="divider"></div>
                                             <div class="row z-depth-1-half">
                                                         {% avatar node.parent.author 40 %}
-                                                        <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
+                                                        <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
                                                 </div>
                                             {% endif %}
                                         </h2>
                                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
                                         <div class="row publication-content">
                                             <div class="parrafo comment">
-                                                <div class="wrp-comment">{{ node.content|safe }}</div>
+                                                <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                                             </div>
                                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                                 <a href="#">+ Mostrar más</a>
@@ -116,7 +117,7 @@
                                                           placeholder="Escribe el contenido del nuevo mensaje"
                                                           id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                           name="content" rows="10" required="required"
-                                                          style="height: 11px;">{{ node.content }}</textarea>
+                                                          style="height: 11px;">{{ node.content|emoji_replace }}</textarea>
                                                 <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                             </div>
                                             <div class="row">
