Beta sticker, socket fixed

--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -39,6 +39,37 @@
         .progress {
             margin: 0 !important;
         }
+        .corner-ribbon{
+            width: 200px;
+            background: #e43;
+            position: absolute;
+            top: 25px;
+            left: -50px;
+            text-align: center;
+            line-height: 50px;
+            letter-spacing: 1px;
+            color: #f0f0f0;
+            transform: rotate(-45deg);
+            -webkit-transform: rotate(-45deg);
+        }
+
+            /* Custom styles */
+
+            .corner-ribbon.sticky{
+                position: fixed;
+            }
+
+            .corner-ribbon.shadow{
+                box-shadow: 0 0 3px rgba(0,0,0,.3);
+            }
+            .corner-ribbon.top-right{
+                top: 25px;
+                right: -50px;
+                left: auto;
+                transform: rotate(45deg);
+                -webkit-transform: rotate(45deg);
+            }
+            .corner-ribbon.blue{background: #64B5F6;}
     </style>
 
 
@@ -70,6 +101,7 @@
 </head>
 
 <body>
+
 <img class="active-img" src="{% static "dist/img/backgrounds/back.jpg" %}" alt="background">
 <header>
     {% comment "loader" %} Desaparece cuando la pagina este lista... {% endcomment %}
@@ -90,6 +122,7 @@
     </div>
 </div>
 <main>
+    <div class="corner-ribbon top-right sticky blue">In beta!</div>
     {% block content %}{% endblock %}
 </main>
 <footer class="page-footer white">
