--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -122,7 +122,7 @@
     </div>
 </div>
 <main>
-    <div class="corner-ribbon top-right sticky blue">In beta!</div>
+    <div class="corner-ribbon top-right sticky blue">Beta!</div>
     {% block content %}{% endblock %}
 </main>
 <footer class="page-footer white">
