--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -672,17 +672,16 @@ Template para las busquedas
             }
         });
 
-        var $grid = $('.grid').masonry({
-            itemSelector: '.grid-item',
-            columnWidth: 300,
-            gutter: 20,
-            fitWidth: true,
-            initLayout: false,
-            horizontalOrder: true,
-            transitionDuration: '0.3s'
+        var $grid = $('.grid').imagesLoaded(function () {
+            $grid.masonry({
+                itemSelector: '.grid-item',
+                columnWidth: 300,
+                gutter: 20,
+                fitWidth: true,
+                initLayout: false,
+                horizontalOrder: true,
+                transitionDuration: '0.3s'
+            });
         });
-        $grid.imagesLoaded().progress(function () {
-            $grid.masonry('layout');
-        })
     </script>
 {% endblock %}
