/incio fixed and mixed http/https content too

--- a/dash/contrib/plugins/service/templates/service/youtube/service_result.html
+++ b/dash/contrib/plugins/service/templates/service/youtube/service_result.html
@@ -9,7 +9,7 @@
                     <div class="card-content black-text">
                         <div class="row">
                             {% with "https://youtube.com/watch?v="|add:result.snippet.resourceId.videoId as youtube_url %}
-                                {% video youtube_url %}
+                                {% video youtube_url is_secure=True %}
                             {% endwith %}
                         </div>
                         <div class="row">
