--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -69,7 +69,7 @@
                             {% comment %} Para publicaciones con URL {% endcomment %}
                             {% if pub.theme_extra_content.video %}
                                 {% video pub.theme_extra_content.video as my_video %}
-                                {% video my_video "100% x 100%" %}
+                                {% video my_video "100% x 100%" is_secure=True %}
                                 {% endvideo %}
                             {% else %}
                                 <div class="card small">
