--- a/user_profile/templates/user_profile/user_content.html
+++ b/user_profile/templates/user_profile/user_content.html
@@ -97,7 +97,7 @@
                                             {% if item.extra_content %}
                                             {% if item.extra_content.video %}
                                             {% video item.extra_content.video as my_video %}
-                                            {% video my_video "100% x 100%" %}
+                                            {% video my_video "100% x 100%" is_secure=True %}
                                             {% endvideo %}
                                             {% else %}
                                             {% comment %} Para publicaciones con URL {% endcomment %}
