--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -81,7 +81,7 @@
                                     {% if node.extra_content %}
                                         {% if node.extra_content.video %}
                                             {% video node.extra_content.video as my_video %}
-                                            {% video my_video "100% x 100%" %}
+                                            {% video my_video "100% x 100%" is_secure=True %}
                                             {% endvideo %}
                                         {% else %}
                                             {% comment %} Para publicaciones con URL {% endcomment %}
