--- a/skyfolk/templates/account/shared_publication.html
+++ b/skyfolk/templates/account/shared_publication.html
@@ -74,7 +74,7 @@
         {% comment %} Para publicaciones con URL {% endcomment %}
         {% if  shared_publication.extra_content.video %}
         {% video shared_publication.extra_content.video as my_video %}
-        {% video my_video "100% x 100%" %}
+        {% video my_video "100% x 100%" is_secure=True %}
         {% endvideo %}
         {% else %}
         <div class="card small">
