--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -76,7 +76,7 @@
                                    {% comment %} Para publicaciones con URL {% endcomment %}
                                    {% if node.shared_publication.extra_content.video %}
                                    {% video node.shared_publication.extra_content.video as my_video %}
-                                   {% video my_video "100% x 100%" %}
+                                   {% video my_video "100% x 100%" is_secure=True %}
 
                                    {% endvideo %}
                                    {% else %}
@@ -135,7 +135,7 @@
                             {% comment %} Para publicaciones con URL {% endcomment %}
                             {% if node.extra_content.video %}
                             {% video node.extra_content.video as my_video %}
-                            {% video my_video "100% x 100%" %}
+                            {% video my_video "100% x 100%" is_secure=True %}
                             {% endvideo %}
                             {% else %}
                             <div class="card small">
