--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -185,7 +185,7 @@ Template para las busquedas
                                         {% if item.object.extra_content %}
                                             {% if item.object.extra_content.video %}
                                                 {% video item.object.extra_content.video as my_video %}
-                                                    {% video my_video "100% x 100%" %}
+                                                    {% video my_video "100% x 100%" is_secure=True %}
                                                 {% endvideo %}
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
@@ -408,7 +408,7 @@ Template para las busquedas
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  node.shared_publication.extra_content.video %}
                                                                 {% video node.shared_publication.extra_content.video as my_video %}
-                                                                {% video my_video "100% x 100%" %}
+                                                                {% video my_video "100% x 100%" is_secure=True %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -489,7 +489,7 @@ Template para las busquedas
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  item.object.shared_group_publication.extra_content.video %}
                                                                 {% video item.object.shared_group_publication.extra_content.video as my_video %}
-                                                                {% video my_video "100% x 100%" %}
+                                                                {% video my_video "100% x 100%" is_secure=True %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -538,7 +538,7 @@ Template para las busquedas
                                         {% if item.object.extra_content %}
                                             {% if item.object.extra_content.video %}
                                                 {% video item.object.extra_content.video as my_video %}
-                                                    {% video my_video "100% x 100%" %}
+                                                    {% video my_video "100% x 100%" is_secure=True %}
                                                 {% endvideo %}
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
@@ -657,6 +657,17 @@ Template para las busquedas
     <script src="{% static "js/photo_gallery.js" %}" type="text/javascript"></script>
     <script src="{% static "js/imagesloaded.pkgd.min.js" %}"></script>
     <script>
+        var $grid = $('.grid').imagesLoaded(function () {
+            $grid.masonry({
+                itemSelector: '.grid-item',
+                columnWidth: 300,
+                gutter: 20,
+                fitWidth: true,
+                horizontalOrder: true,
+                transitionDuration: '0.3s'
+            });
+        });
+
         var infinite = new Waypoint.Infinite({
             element: $('.grid'),
             offset: 'bottom-in-view',
@@ -672,16 +683,5 @@ Template para las busquedas
             }
         });
 
-        var $grid = $('.grid').imagesLoaded(function () {
-            $grid.masonry({
-                itemSelector: '.grid-item',
-                columnWidth: 300,
-                gutter: 20,
-                fitWidth: true,
-                initLayout: false,
-                horizontalOrder: true,
-                transitionDuration: '0.3s'
-            });
-        });
     </script>
 {% endblock %}
