--- a/skyfolk/templates/emails/recommendations.html
+++ b/skyfolk/templates/emails/recommendations.html
@@ -8,9 +8,9 @@
     Tenemos algunas recomendaciones para ti:
 </p>
 <ul>
-    {% for user in object_list %}
+    {% for profile in object_list %}
         <li>
-            <a href="skyfolk.net/profile/{{ user.title }}/">@{{ user.title }}</a>
+            <a href="https://skyfolk.net/profile/{{ profile.user.username }}/">@{{ profile.user.username }}</a>
         </li>
     {% endfor %}
 </ul>
