--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -261,7 +261,7 @@
     <script src="{% static "js/socket_news.js" %}" type="text/javascript"></script>
     <script src="{% static "js/dash.js" %}" type="text/javascript"></script>
     <script>
-        $(document).ready(function () {
+        $(window).on('load', function () {
             var $grid = $('.grid').imagesLoaded(function () {
                 $grid.masonry({
                     itemSelector: '.grid-item',
