--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -106,7 +106,7 @@
                                                     {% for image in images %}
                                                         {% if image.image %}
                                                             <div class="col s12 center">
-                                                                <img class="responsive-img"
+                                                                <img class="responsive-img materialboxed"
                                                                      src="{{ image.image.url }}"
                                                                      alt="Imagen de: {{ item.author }}"
                                                                      title="Imagen de: {{ item.author }}">
