--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -5,6 +5,7 @@
 {% load mptt_tags %}
 {% load embed_video_tags %}
 {% load group_utils %}
+{% load emoji_tags %}
 {% load static %}
 <input type="hidden" value="{{ publications|length }}" class="childs_for_{{ pub_id }}">
 {% if publications.has_next %}
@@ -37,7 +38,7 @@
                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
                         <div class="row publication-content">
                             <div class="parrafo comment">
-                                <div class="wrp-comment">{{ node.content|safe }}</div>
+                                <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                 <a href="#">+ Mostrar más</a>
