--- a/skyfolk/templates/about/entry_list_page.html
+++ b/skyfolk/templates/about/entry_list_page.html
@@ -1,5 +1,5 @@
 {% load el_pagination_tags %}
-
+{% load emoji_tags %}
 {% paginate publications_blog %}
 <br>
 <div class="row">
@@ -7,7 +7,7 @@
         <div class="col s12">
           <div class="card">
             <div class="card-content blue lighten-2 clearfix">
-              <p class="flow-text">{{ pub.content|safe }}</p>
+              <p class="flow-text">{{ pub.content|safe|emoji_replace }}</p>
               <span class="card-title">
                   {% for tag in pub.tags.all %}
                   <span class="chip">
