--- a/skyfolk/templates/channels/new_video_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_video_group_publication_detail.html
@@ -31,7 +31,7 @@
                             <div class="parrafo comment">
                                 <p
                                         class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                                <div class="wrp-comment">{{ node.content|safe }}</div>
+                                <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                 <a href="#">+ Mostrar más</a>
