--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -3,6 +3,7 @@
 {% load embed_video_tags %}
 {% load app_filters %}
 {% load group_utils %}
+{% load emoji_tags %}
 {% load static %}
     {% for node in publications %}
         <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ group_profile.pk }}">
@@ -31,7 +32,7 @@
                                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
                                         <div class="row publication-content">
                                             <div class="parrafo comment">
-                                                <div class="wrp-comment">{{ node.content|safe }}</div>
+                                                <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
                                             </div>
                                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                                 <a href="#">+ Mostrar más</a>
