Following moved to pin, vote system changed

--- a/dash/contrib/plugins/service/templates/service/base_result.html
+++ b/dash/contrib/plugins/service/templates/service/base_result.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% if results.has_other_pages %}
-  <ul class="pagination">
+  <ul class="pagination service-pin">
     {% if results.has_previous %}
       <li><a href="?page={{ results.previous_page_number }}">&laquo;</a></li>
     {% else %}
