--- a/photologue/templates/photologue/videos/publication_detail.html
+++ b/photologue/templates/photologue/videos/publication_detail.html
@@ -38,8 +38,11 @@
                              id="pub-{{ node.id }}"
                              data-id="{{ user.pk }}">
                             <div class="row">
-                                <div class="image col l1 m2 s2">
-                                    <div class="usr-img img-responsive">{% avatar node.author %}</div>
+                                <div class="col l1 m2 s2">
+                                    <div class="row">
+                                        <div class="usr-img img-responsive">{% avatar node.author %}</div>
+                                    </div>
+                                    {% include "publications_base/publication_score.html" %}
                                 </div>
                                 <div class="articulo col l11 s10">
                                     <h2 class="author-header"><a
