--- a/skyfolk/static/css/profile.css
+++ b/skyfolk/static/css/profile.css
@@ -854,7 +854,7 @@
   overflow: hidden;
   height: 100%; }
 
-#tab-amigos .infinite-following {
+.infinite-following {
   position: relative;
   margin: auto;
   list-style-type: none; }
@@ -866,7 +866,7 @@
 #hood-tabs::-webkit-scrollbar {
   display: none; }
 
-#tab-amigos .infinite-following .following-item {
+.infinite-following .following-item {
   display: table;
   background-color: #FAFAFA;
   margin: 10px;
@@ -878,14 +878,14 @@
   -moz-box-shadow: 0 0 3px 1px #1e88e5;
   box-shadow: 0 0 3px 1px #1e88e5; }
 
-#tab-amigos .infinite-following .following-item img {
+.infinite-following .following-item img {
   width: 72px;
   height: 72px;
   float: left;
   border-right: 2px solid #1e88e5;
   cursor: pointer; }
 
-#tab-amigos .infinite-following .following-item a {
+.infinite-following .following-item a {
   text-decoration: none;
   vertical-align: middle;
   display: table-cell;
@@ -898,7 +898,7 @@
   margin: auto auto auto 0;
   width: 100%; }
 
-#tab-amigos .infinite-following .following-item a:hover {
+.infinite-following .following-item a:hover {
   opacity: 0.5;
   transition: all 0.2s ease-in; }
 
@@ -1353,7 +1353,6 @@ ul.table > li {
   z-index: 2; }
 
 .wrapper .widget-wr img {
-  width: 99.931%;
   height: 100%;
   border: 2px solid #fff;
   margin-left: auto;
