--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -859,7 +859,7 @@ $followcolor: #64b5f6
   overflow: hidden
   height: 100%
 
-#tab-amigos .infinite-following
+.infinite-following
   position: relative
   margin: auto
   list-style-type: none
@@ -871,7 +871,7 @@ $followcolor: #64b5f6
 #hood-tabs::-webkit-scrollbar
   display: none
 
-#tab-amigos .infinite-following .following-item
+.infinite-following .following-item
   display: table
   background-color: #FAFAFA
   margin: 10px
@@ -883,14 +883,14 @@ $followcolor: #64b5f6
   -moz-box-shadow: 0 0 3px 1px #1e88e5
   box-shadow: 0 0 3px 1px #1e88e5
 
-#tab-amigos .infinite-following .following-item img
+.infinite-following .following-item img
   width: 72px
   height: 72px
   float: left
   border-right: 2px solid #1e88e5
   cursor: pointer
 
-#tab-amigos .infinite-following .following-item a
+.infinite-following .following-item a
   text-decoration: none
   vertical-align: middle
   display: table-cell
@@ -903,7 +903,7 @@ $followcolor: #64b5f6
   margin: auto auto auto 0
   width: 100%
 
-#tab-amigos .infinite-following .following-item a:hover
+.infinite-following .following-item a:hover
   opacity: 0.5
   transition: all .2s ease-in
 
@@ -1375,7 +1375,6 @@ ul.table > li
   z-index: 2
 
 .wrapper .widget-wr img
-  width: 99.931%
   height: 100%
   border: 2px solid #fff
   margin-left: auto
