--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -18,10 +18,12 @@
                     <div class="row">
                         <div class="articulo col s12">
                             <div class="row">
-                                <div class="image col l1 m2 s2"
-                                     {% if user.id == node.author.id %}title="¡Eres el autor!"
-                                     style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
-                                    <div class="usr-img img-responsive">{% avatar node.author %}</div>
+                                <div class="col l1 m2 s2">
+                                    <div class="row">
+                                        <div class="usr-img img-responsive" {% if user.id == node.author.id %}title="¡Eres el autor!"
+                                     style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>{% avatar node.author %}</div>
+                                    </div>
+                                    {% include "publications_base/publication_score.html" %}
                                 </div>
                                 <div class="col l11 s10">
                                     <h2 class="h22"><a
