--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -11,8 +11,13 @@
             <div class="col wrapper push-l2 l9 m10 s12"
                  data-id="{{ pub.pk }}" {% if pub.parent %}data-parent="{{ pub.parent.id }}"{% endif %}>
                 <div class="row">
-                    <div class="image col l1 m2 s2">
-                        <div class="usr-img img-responsive">{% avatar pub.author %}</div>
+                    <div class="col l1 m2 s2">
+                        <div class="row">
+                            <div class="usr-img img-responsive">{% avatar pub.author %}</div>
+                        </div>
+                        {% with pub as node %}
+                            {% include "publications_base/publication_score.html" %}
+                        {% endwith %}
                     </div>
                     <div class="articulo col l9 s8">
                         <h2 class="author-header"><a
@@ -101,17 +106,6 @@
                                     <i class="material-icons">more_horiz</i>
                                 </li>
                             {% endif %}
-                            {% comment %} Si el usuario esta logueado {% endcomment %}
-                            <li title="No me gusta" class="hate-comment" {% if pub.have_hate %}
-                                style="color: rgb(186, 104, 200);"{% endif %}>
-                                <i class="material-icons md-18">keyboard_arrow_down</i>
-                                <i class="hate-value">{{ pub.hates|zero_to_empty }}</i>
-                            </li>
-                            <li title="¡Me gusta!" class="like-comment"
-                                {% if pub.have_like %}style="color: rgb(240, 98, 146);"{% endif %}>
-                                <i class="material-icons md-18">keyboard_arrow_up</i>
-                                <i class="like-value">{{ pub.likes|zero_to_empty }}</i>
-                            </li>
                             <li title="Responder" class="reply-comment"
                                 id="reply-caja-comentario-{{ pub.pk }}">
                                 <i class="material-icons md-18">reply</i>
