--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -69,8 +69,11 @@
                                     {% if node.level > 0 %}
                                  style="border-right: 2px solid #1e88e5;"{% endif %}>
                                 <div class="row">
-                                    <div class="image col l1 m2 s2">
-                                        <div class="usr-img img-responsive">{% avatar node.author %}</div>
+                                    <div class="col l1 m2 s2">
+                                        <div class="row">
+                                            <div class="usr-img img-responsive">{% avatar node.author %}</div>
+                                        </div>
+                                        {% include "publications_base/publication_score.html" %}
                                     </div>
                                     <div class="articulo col l11 s10">
                                         <h2 class="author-header"><a
